<resources>
    <string name="app_name">ENHATRAPE</string>
    <string name="titulo_encuesta">ENCUESTA “HABILIDADES AL TRABAJO EN EL PERÚ”</string>
    <string name="caratula_loc">LOCALIZACIÓN DE LA EMPRESA</string>
    <string name="caratula_loc_ubicacion_geo">A.UBICACIÓN GEOGRÁFICA</string>
    <string name="caratula_loc_ubicacion_geo_departamento">1.Departamento</string>
    <string name="caratula_loc_ubicacion_geo_provincia">2.Provincia</string>
    <string name="caratula_loc_ubicacion_geo_distrito">3.Distrito</string>
    <string name="caratula_loc_identificacion">IDENTIFICADOR UNICO DE LA EMPRESA</string>
    <string name="caratula_loc_cambiodistrito">Cambio de Distrito</string>
    <string name="caratula_loc_coordenadas">B.COORDENADAS DEL PUNTO GPS</string>
    <string name="caratula_loc_coordenadas_gps_latitud">4.GPS LATITUD</string>
    <string name="caratula_loc_coordenadas_gps_altitud">4.GPS ALTITUD</string>
    <string name="caratula_loc_coordenadas_gps_longitud">4.GPS LONGITUD</string>
    <string name="caratula_loc_ubicacion_muestral">C.UBICACIÓN MUESTRAL</string>
    <string name="caratula_loc_ubicacion_muestral_sector">5.Sector de Trabajo</string>
    <string name="caratula_loc_ubicacion_muestral_area">6.Área de Trabajo</string>
    <string name="caratula_loc_ubicacion_muestral_zona">7.Zona</string>
    <string name="caratula_loc_ubicacion_muestral_manzana">8.Manzana</string>
    <string name="caratula_loc_ubicacion_muestral_frente">9.Frente</string>
    <string name="caratula_loc_direccion">10.Dirección </string>
    <string name="caratula_loc_tipo">Tipo Vía </string>
    <string name="caratula_loc_nombrevia">Nombre de la Vía </string>
    <string name="caratula_loc_direccion_nombre">Tipo Vía:</string>
    <string name="caratula_loc_direccion_nombre_avenida">Avenida</string>
    <string name="caratula_loc_direccion_nombre_jiron">Jirón</string>
    <string name="caratula_loc_direccion_nombre_calle">Calle</string>
    <string name="caratula_loc_direccion_nombre_pasaje">Pasaje</string>
    <string name="caratula_loc_direccion_nombre_carretera">Carretera</string>
    <string name="caratula_loc_direccion_nombre_prolongacion">Prolongación</string>
    <string name="caratula_loc_direccion_npuerta">Nº puerta</string>
    <string name="caratula_loc_direccion_block">Block</string>
    <string name="caratula_loc_direccion_interior">Interior</string>
    <string name="caratula_loc_direccion_piso">Piso</string>
    <string name="caratula_loc_direccion_manzana">Manzana</string>
    <string name="caratula_loc_direccion_lote">Lote</string>
    <string name="caratula_loc_direccion_km">Km.</string>
    <string name="caratula_loc_direccion_referencia">11.Referencia de la dirección</string>
    <string name="caratula_datos">DATOS DE LA ENTREVISTA</string>
    <string name="caratula_datos_operador">Operador de empresas</string>
    <string name="caratula_datos_jefe">Jefe de Equipo</string>
    <string name="caratula_datos_supervisor">Supervisor Nacional</string>
    <string name="caratula_datos_dni">DNI</string>
    <string name="caratula_datos_nombres">Nombres y Apellidos</string>
    <string name="caratula_identificacion">IDENTIFICACIÓN DE LA EMPRESA Y CONDUCTOR DE LA EMPRESA</string>
    <string name="caratula_identificacion_ruc">1.Nº de RUC</string>
    <string name="caratula_identificacion_razon_social">2.Razón social o apellidos y nombres del propietario</string>
    <string name="caratula_identificacion_nombre_comercial">3.Nombre comercial de la empresa</string>
    <string name="caratula_identificacion_anio_fundacion">4.Año de fundación </string>
    <string name="caratula_identificacion_pagina_web">5.Página web</string>
    <string name="caratula_identificacion_correo">6.Correo electrónico</string>
    <string name="caratula_identificacion_nopagina_web">No tiene página web</string>
    <string name="caratula_identificacion_nocorreo">No tiene correo electrónico</string>
    <string name="caratula_identificacion_telefono_fijo">7.Teléfono fijo</string>
    <string name="caratula_identificacion_telefono_movil">8.Teléfono móvil</string>
    <string name="caratula_identificacion_telefono_nofijo">No tiene teléfono fijo</string>
    <string name="caratula_identificacion_telefono_nomovil">No tiene teléfono móvil</string>
    <string name="caratula_identificacion_telefono_anio_inicio_func">9.Año inicio funcionamiento</string>
    <string name="caratula_identificacion_conductor_informante">DEL CONDUCTOR E INFORMANTE</string>
    <string name="caratula_identificacion_conductor_informante_apellidos">10.Apellidos y nombres del conductor o responsable de la gestión de la empresa (o gerente general)</string>
    <string name="caratula_identificacion_conductor_informante_sexo">11.Sexo</string>
    <string name="caratula_identificacion_conductor_informante_edad">12.Edad</string>
    <string name="nivel_estudios">13.Último nivel de estudios alcanzado</string>
    <string name="nivel_estudios_sin">Sin nivel</string>
    <string name="nivel_estudios_inicial">Inicial</string>
    <string name="nivel_estudios_prim_inc">Primaria incompleta</string>
    <string name="nivel_estudios_prim_com">Primaria completa</string>
    <string name="nivel_estudios_sec_inc">Secundaria incompleta</string>
    <string name="nivel_estudios_sec_com">Secundaria completa</string>
    <string name="nivel_estudios_nouniv_inc">Superior no univ. incompleta</string>
    <string name="nivel_estudios_nouniv_com">Superior no univ. completa</string>
    <string name="nivel_estudios_univ_inc">Superior univ. incompleta</string>
    <string name="nivel_estudios_univ_com">Superior univ. completa</string>
    <string name="nivel_estudios_postgrado">Post grado</string>
    <string name="caratula_identificacion_conductor_informante_cargo">14.Cargo</string>
    <string name="modulo1_nombre">MÓDULO  I. CARACTERÍSTICAS DE LA EMPRESA</string>
    <string name="modulo2_nombre">MÓDULO II. EMPLEO</string>
    <string name="modulo3_nombre">MÓDULO III. ACTIVIDADES DE LA EMPRESA</string>
    <string name="modulo4_nombre">MÓDULO IV. ESTRATEGIA DE PRODUCTOS Y HABILIDADES</string>
    <string name="modulo5_nombre">MÓDULO V. VACANTES Y CONTRATACIÓN </string>
    <string name="modulo6_nombre">MÓDULO VI. HABILIDADES Y COMPETENCIAS</string>
    <string name="modulo7_nombre">MÓDULO VII. CAPACITACIÓN Y DESARROLLO PERSONAL</string>
    <string name="modulo8_nombre">MÓDULO VIII. INNOVACIÓN Y NUEVAS TECNOLOGÍAS</string>
    <string name="modulo9_nombre">MÓDULO IX. PREGUNTAS FINALES</string>
    <string name="modulo1_pregunta1">1.Actividad económica principal de la empresa</string>
    <string name="modulo1_pregunta1_descripcion">(Describa la principal actividad que realiza la empresa y registre el código CIIU Rev. 4 que corresponda)</string>
    <string name="modulo1_pregunta2">2.Actividades económicas secundarias de la empresa</string>
    <string name="modulo1_pregunta2_descripcion">(Describa la(s) actividad(es) secundaria(s) que realiza la empresa y registre el código CIIU Rev. 4 que corresponda)</string>
    <string name="modulo1_pregunta2_2">Actividades económicas secundarias de la empresa 2</string>
    <string name="modulo1_pregunta2_3">No tiene actividades económicas secundarias</string>
    <string name="modulo1_pregunta2_4">No tiene actividades económicas secundarias 2</string>
    <string name="modulo1_pregunta3">3.Organización de la empresa:</string>
    <string name="modulo1_pregunta3_descripcion">(Seleccione la alternativa que corresponda)</string>
    <string name="modulo1_pregunta3_subpregunta1">1.Persona natural</string>
    <string name="modulo1_pregunta3_subpregunta2">2.Sociedad anónima</string>
    <string name="modulo1_pregunta3_subpregunta3">3.Sociedad anónima abierta</string>
    <string name="modulo1_pregunta3_subpregunta4">4.Sociedad anónima cerrada</string>
    <string name="modulo1_pregunta3_subpregunta5">5.Sociedad comercial de responsabilidad limitada</string>
    <string name="modulo1_pregunta3_subpregunta6">6.Empresa individual de responsabilidad limitada</string>
    <string name="modulo1_pregunta3_subpregunta7">7.Otra</string>
    <string name="modulo1_pregunta4">4.Régimen de propiedad</string>
    <string name="modulo1_pregunta41">4.1.El Régimen de propiedad y control de su empresa es:</string>
    <string name="modulo1_pregunta42">4.2.El control de su empresa es?</string>
    <string name="modulo1_pregunta4_descripcion">(Lea y registre según corresponda)</string>
    <string name="modulo1_pregunta4_subpregunta1">Empresa privada nacional</string>
    <string name="modulo1_pregunta4_subpregunta2">Empresa privada extranjera</string>
    <string name="modulo1_pregunta4_subpregunta3">Empresa mixta</string>
    <string name="modulo1_pregunta5">5.Su empresa ¿pertenece a algún grupo u organización empresarial? </string>
    <string name="modulo1_pregunta5_descripcion">(Seleccione la alternativa que corresponda)</string>
    <string name="mod2_p13">13. Uno de los tipos de contratos más usados por las empresas en el último año es la de servicios no personales (SNp) / recibos por honorarios, ¿indique por qué razones usó contratos de SNp/ recibos por honorarios?</string>
    <string name="mod2_p13_sp1">1.No usé esta modalidad contractual</string>
    <string name="mod2_p13_sp2">2.Son trabajadores que no realizan las tareas principales de la empresa</string>
    <string name="mod2_p13_sp3">3.Son contratos más sencillos de administrar</string>
    <string name="mod2_p13_sp4">4.Facilidad para resolver el contrato</string>
    <string name="mod2_p13_sp5">5.Ahorro en costos salariales (gratificaciones, CTS, etc.)</string>
    <string name="mod2_p13_sp6">6.Ahorro en costos no salariales (vacaciones, seguros, pensiones, etc.)</string>
    <string name="mod2_p13_sp7">7.Otra</string>
    <string name="mod8_p1">1. ¿Se encuentra actualmente utilizando alguno de los siguientes ítems en el proceso que utiliza para producir sus bienes o servicios?</string>
    <string name="mod8_p1_sp0">Afectación</string>
    <string name="mod8_p1_op1">1.En gran medida</string>
    <string name="mod8_p1_op2">2.De forma moderada</string>
    <string name="mod8_p1_op3">3.En minima medida</string>
    <string name="mod8_p2">2. ¿Qué tan probable es que utilice más o introduzca en los próximos tres años en su sistema de producción de bienes y/o servicios tecnologías como</string>
    <string name="mod8_p2_op1">1.Muy Probable</string>
    <string name="mod8_p2_op2">2.Probable</string>
    <string name="mod8_p2_op3">3.Poco Probable</string>
    <string name="mod8_p2_op4">4.Improbable</string>
    <string name="mod8_p2_op5">5.NO SABE</string>
    <string name="mod8_p3">3. ¿Por qué no ha introducido esta tecnología: ITEM?</string>
    <string name="mod8_p3_op1">1.No hay demanda en la empresa</string>
    <string name="mod8_p3_op2">2.No existen habilidades en la empresa para introducirlo</string>
    <string name="mod8_p3_op3">3.No existen habilidades en el mercado laboral para introducirlo</string>
    <string name="mod8_p3_op4">4.No estoy seguro de lo que es o qué puede hacer</string>
    <string name="mod8_p3_op5">5.Hay escaso capital de inversión</string>
    <string name="mod8_p3_op6">6.Otro</string>
    <string name="mod8_p8">8. ¿En qué mercado buscará personal?</string>
    <string name="mod8_p8_op1">1.Local</string>
    <string name="mod8_p8_op2">2.Nacional</string>
    <string name="mod8_p8_op3">3.Internacional</string>
    <string name="mod8_p8_op4">4.No sabe</string>
    <string name="mod8_p9">9. Esto va a ser provisto a través de Capacitación</string>
    <string name="mod8_p9_op1">1.Externa, en centros de formación públicos</string>
    <string name="mod8_p9_op2">2.Externa, en centros de formación privados</string>
    <string name="mod8_p9_op3">3.En la empresa</string>
    <string name="mod8_p9_op4">4.No Sabe</string>
    <string name="especifique">Especifique</string>
</resources>