<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_margin="@dimen/margin10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin10dp"
    android:background="@drawable/border_layout_subpreguntas"
    xmlns:android="http://schemas.android.com/apk/res/android">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:text="@string/mod8_p1"
    android:layout_marginBottom="@dimen/margin5dp"/>
<RadioGroup
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin10dp">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SI"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO"/>
</RadioGroup>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin10dp"
    android:background="@drawable/border_layout_subpreguntas">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod8_p1_sp0"
        android:layout_marginBottom="@dimen/margin5dp"
        android:textStyle="bold"/>
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod8_p1_op1"
            android:layout_marginRight="@dimen/margin10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod8_p1_op2"
            android:layout_marginRight="@dimen/margin10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod8_p1_op3"/>
    </RadioGroup>
</LinearLayout>
</LinearLayout>