<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:padding="@dimen/margin15dp"
    android:background="@drawable/borde_layout_preguntas"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod2_p13"
        android:layout_marginBottom="@dimen/fab_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:background="@drawable/cabecera"
                android:gravity="center"
                android:text="Razones"
                android:textColor="@color/icons"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:background="@drawable/cabecera"
                android:gravity="center"
                android:text="Orden de importancia"
                android:textColor="@color/icons"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin10dp"
                android:layout_weight="5"
                android:text="@string/mod2_p13_sp1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:background="@drawable/caja_texto_redonda">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Orden de Importancia"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin10dp"
                android:layout_weight="5"
                android:text="@string/mod2_p13_sp2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:background="@drawable/caja_texto_redonda">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Orden de Importancia"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin10dp"
                android:layout_weight="5"
                android:text="@string/mod2_p13_sp3" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:background="@drawable/caja_texto_redonda">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Orden de Importancia"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin10dp"
                android:layout_weight="5"
                android:text="@string/mod2_p13_sp4" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:background="@drawable/caja_texto_redonda">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Orden de Importancia"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin10dp"
                android:layout_weight="5"
                android:text="@string/mod2_p13_sp5" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:background="@drawable/caja_texto_redonda">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Orden de Importancia"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin10dp"
                android:layout_weight="5"
                android:text="@string/mod2_p13_sp6" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:background="@drawable/caja_texto_redonda">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Orden de Importancia"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mod2_p13_sp7" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:background="@drawable/cajas_de_texto"
                    android:hint="@string/especifique"
                    android:inputType="text"
                    android:maxLength="200"
                    android:paddingLeft="@dimen/margin5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/margin15dp"
                android:layout_weight="2"
                android:background="@drawable/caja_texto_redonda">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Orden de Importancia"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>